# multiplater_pvp_game

./: README.md
client/: CMakeLists.txt  app.hpp  client.hpp  game.hpp  globals.hpp  menu.hpp  screen.hpp  screen_manager.hpp  tilemap.hpp
client/maps/default/: map.json
client/src/: app.cpp  client.cpp  game.cpp  globals.cpp  menu.cpp  screen_manager.cpp  tilemap.cpp
server/: client.js  server.js
